# python-testing-project-lvl1

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml
page_loader/: __init__.py  ex_scraping.py  loader.py  loggers.py  parser.py  scrap.py  scraping.py  utils.py
page_loader/scripts/: main.py
tests/: ex_test_loader.py  test_download_files.py  test_filter.py  test_loader.py  test_parser.py  test_replace_links.py  test_scraper.py  testing.ipynb
tests/fixtures/: after.html  before.html  hexlet.html
tests/fixtures/shad/: Вероятностный подход в ML · Учебник по ML от ШАД.html
tests/fixtures/shad/Вероятностный подход в ML · Учебник по ML от ШАД_files/: lanyon.css  poole.css  toc.css
