[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page downloader"
authors = ["tommyqamaz <solgrini@yandex.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
flake8 = "^5.0.4"
ipython = "^8.4.0"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
